--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ install: true
 
 jdk:
   - oraclejdk8
+  
+before_install:
+ - chmod +x gradlew
 
 script:
   - ./gradlew build test dependencyCheckAnalyze
