--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ jdk:
   
 before_install:
  - chmod +x gradlew
+ 
+ addons:
+  sonarcloud:
+    organization: "sriharisahu-github" # the key of the org you chose at step #3
+    token:
+      secure: 65846feaf88d067a79011788d9cc1f7fde76bb1a
 
 script:
-  - ./gradlew build test dependencyCheckAnalyze
+  - ./gradlew build test dependencyCheckAnalyze sonar:sonar
