Renaming the project

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ jdk:
   - oraclejdk8
  
 addons:
-sonarcloud:
-  organization: "sriharisahu-github" # the key of the org you chose at step #3
-  token:
-    secure: 65846feaf88d067a79011788d9cc1f7fde76bb1a
+  sonarcloud:
+    organization: "sriharisahu-github"
+    token:
+      secure: 65846feaf88d067a79011788d9cc1f7fde76bb1a
+  artifacts: true
 
 script:
   - ./gradlew build test dependencyCheckAnalyze sonarqube
